@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,13 +20,14 @@ import java.io.FileNotFoundException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.time.Duration;
-import java.util.Collections;
+import java.util.ArrayDeque;
+import java.util.Deque;
 import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
-import java.util.Stack;
 
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.ProcessingEnvironment;
@@ -41,12 +42,12 @@ import javax.lang.model.element.Modifier;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.TypeKind;
-import javax.lang.model.type.TypeMirror;
 import javax.lang.model.util.ElementFilter;
 import javax.tools.Diagnostic.Kind;
 
 import org.springframework.boot.configurationprocessor.metadata.ConfigurationMetadata;
 import org.springframework.boot.configurationprocessor.metadata.InvalidConfigurationMetadataException;
+import org.springframework.boot.configurationprocessor.metadata.ItemDeprecation;
 import org.springframework.boot.configurationprocessor.metadata.ItemMetadata;
 
 /**
@@ -57,9 +58,19 @@ import org.springframework.boot.configurationprocessor.metadata.ItemMetadata;
  * @author Phillip Webb
  * @author Kris De Volder
  * @author Jonas Keßler
+ * @author Scott Frederick
+ * @author Moritz Halbritter
  * @since 1.2.0
  */
-@SupportedAnnotationTypes({ "*" })
+@SupportedAnnotationTypes({ ConfigurationMetadataAnnotationProcessor.CONFIGURATION_PROPERTIES_ANNOTATION,
+		ConfigurationMetadataAnnotationProcessor.AUTO_CONFIGURATION_ANNOTATION,
+		ConfigurationMetadataAnnotationProcessor.CONFIGURATION_ANNOTATION,
+		ConfigurationMetadataAnnotationProcessor.CONTROLLER_ENDPOINT_ANNOTATION,
+		ConfigurationMetadataAnnotationProcessor.ENDPOINT_ANNOTATION,
+		ConfigurationMetadataAnnotationProcessor.JMX_ENDPOINT_ANNOTATION,
+		ConfigurationMetadataAnnotationProcessor.REST_CONTROLLER_ENDPOINT_ANNOTATION,
+		ConfigurationMetadataAnnotationProcessor.SERVLET_ENDPOINT_ANNOTATION,
+		ConfigurationMetadataAnnotationProcessor.WEB_ENDPOINT_ANNOTATION })
 public class ConfigurationMetadataAnnotationProcessor extends AbstractProcessor {
 
 	static final String ADDITIONAL_METADATA_LOCATIONS_OPTION = "org.springframework.boot.configurationprocessor.additionalMetadataLocations";
@@ -70,22 +81,35 @@ public class ConfigurationMetadataAnnotationProcessor extends AbstractProcessor 
 
 	static final String DEPRECATED_CONFIGURATION_PROPERTY_ANNOTATION = "org.springframework.boot.context.properties.DeprecatedConfigurationProperty";
 
-	static final String CONSTRUCTOR_BINDING_ANNOTATION = "org.springframework.boot.context.properties.ConstructorBinding";
+	static final String CONSTRUCTOR_BINDING_ANNOTATION = "org.springframework.boot.context.properties.bind.ConstructorBinding";
+
+	static final String AUTOWIRED_ANNOTATION = "org.springframework.beans.factory.annotation.Autowired";
 
 	static final String DEFAULT_VALUE_ANNOTATION = "org.springframework.boot.context.properties.bind.DefaultValue";
 
+	static final String AUTO_CONFIGURATION_ANNOTATION = "org.springframework.boot.autoconfigure.AutoConfiguration";
+
+	static final String CONFIGURATION_ANNOTATION = "org.springframework.context.annotation.Configuration";
+
+	static final String CONTROLLER_ENDPOINT_ANNOTATION = "org.springframework.boot.actuate.endpoint.web.annotation.ControllerEndpoint";
+
 	static final String ENDPOINT_ANNOTATION = "org.springframework.boot.actuate.endpoint.annotation.Endpoint";
+
+	static final String JMX_ENDPOINT_ANNOTATION = "org.springframework.boot.actuate.endpoint.jmx.annotation.JmxEndpoint";
+
+	static final String REST_CONTROLLER_ENDPOINT_ANNOTATION = "org.springframework.boot.actuate.endpoint.web.annotation.RestControllerEndpoint";
+
+	static final String SERVLET_ENDPOINT_ANNOTATION = "org.springframework.boot.actuate.endpoint.web.annotation.ServletEndpoint";
+
+	static final String WEB_ENDPOINT_ANNOTATION = "org.springframework.boot.actuate.endpoint.web.annotation.WebEndpoint";
 
 	static final String READ_OPERATION_ANNOTATION = "org.springframework.boot.actuate.endpoint.annotation.ReadOperation";
 
 	static final String NAME_ANNOTATION = "org.springframework.boot.context.properties.bind.Name";
 
-	static final String IMPORT_CONFIGURATION_PROPERTIES_BEAN_ANNOATION = "org.springframework.boot.context.properties.ImportConfigurationPropertiesBean";
+	static final String ENDPOINT_ACCESS_ENUM = "org.springframework.boot.actuate.endpoint.Access";
 
-	static final String IMPORT_CONFIGURATION_PROPERTIES_BEANS_ANNOATION = "org.springframework.boot.context.properties.ImportConfigurationPropertiesBeans";
-
-	private static final Set<String> SUPPORTED_OPTIONS = Collections
-			.unmodifiableSet(Collections.singleton(ADDITIONAL_METADATA_LOCATIONS_OPTION));
+	private static final Set<String> SUPPORTED_OPTIONS = Set.of(ADDITIONAL_METADATA_LOCATIONS_OPTION);
 
 	private MetadataStore metadataStore;
 
@@ -109,12 +133,17 @@ public class ConfigurationMetadataAnnotationProcessor extends AbstractProcessor 
 		return CONSTRUCTOR_BINDING_ANNOTATION;
 	}
 
+	protected String autowiredAnnotation() {
+		return AUTOWIRED_ANNOTATION;
+	}
+
 	protected String defaultValueAnnotation() {
 		return DEFAULT_VALUE_ANNOTATION;
 	}
 
-	protected String endpointAnnotation() {
-		return ENDPOINT_ANNOTATION;
+	protected Set<String> endpointAnnotations() {
+		return Set.of(CONTROLLER_ENDPOINT_ANNOTATION, ENDPOINT_ANNOTATION, JMX_ENDPOINT_ANNOTATION,
+				REST_CONTROLLER_ENDPOINT_ANNOTATION, SERVLET_ENDPOINT_ANNOTATION, WEB_ENDPOINT_ANNOTATION);
 	}
 
 	protected String readOperationAnnotation() {
@@ -125,12 +154,8 @@ public class ConfigurationMetadataAnnotationProcessor extends AbstractProcessor 
 		return NAME_ANNOTATION;
 	}
 
-	protected String importConfigurationPropertiesBeanAnnotation() {
-		return IMPORT_CONFIGURATION_PROPERTIES_BEAN_ANNOATION;
-	}
-
-	protected String importConfigurationPropertiesBeansAnnotation() {
-		return IMPORT_CONFIGURATION_PROPERTIES_BEANS_ANNOATION;
+	protected String endpointAccessEnum() {
+		return ENDPOINT_ACCESS_ENUM;
 	}
 
 	@Override
@@ -150,60 +175,34 @@ public class ConfigurationMetadataAnnotationProcessor extends AbstractProcessor 
 		this.metadataCollector = new MetadataCollector(env, this.metadataStore.readMetadata());
 		this.metadataEnv = new MetadataGenerationEnvironment(env, configurationPropertiesAnnotation(),
 				nestedConfigurationPropertyAnnotation(), deprecatedConfigurationPropertyAnnotation(),
-				constructorBindingAnnotation(), defaultValueAnnotation(), endpointAnnotation(),
-				readOperationAnnotation(), nameAnnotation(), importConfigurationPropertiesBeanAnnotation(),
-				importConfigurationPropertiesBeansAnnotation());
+				constructorBindingAnnotation(), autowiredAnnotation(), defaultValueAnnotation(), endpointAnnotations(),
+				readOperationAnnotation(), nameAnnotation());
 	}
 
 	@Override
 	public boolean process(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv) {
 		this.metadataCollector.processing(roundEnv);
-		processConfigurationProperties(roundEnv);
-		processEndpoint(roundEnv);
-		processImportConfigurationPropertiesBean(roundEnv);
+		TypeElement annotationType = this.metadataEnv.getConfigurationPropertiesAnnotationElement();
+		if (annotationType != null) { // Is @ConfigurationProperties available
+			for (Element element : roundEnv.getElementsAnnotatedWith(annotationType)) {
+				processElement(element);
+			}
+		}
+		Set<TypeElement> endpointTypes = this.metadataEnv.getEndpointAnnotationElements();
+		if (!endpointTypes.isEmpty()) { // Are endpoint annotations available
+			for (TypeElement endpointType : endpointTypes) {
+				getElementsAnnotatedOrMetaAnnotatedWith(roundEnv, endpointType).forEach(this::processEndpoint);
+			}
+		}
 		if (roundEnv.processingOver()) {
 			try {
-				writeMetaData();
+				writeMetadata();
 			}
 			catch (Exception ex) {
 				throw new IllegalStateException("Failed to write metadata", ex);
 			}
 		}
 		return false;
-	}
-
-	private void processConfigurationProperties(RoundEnvironment roundEnv) {
-		TypeElement annotationType = this.metadataEnv.getConfigurationPropertiesAnnotationElement();
-		if (annotationType != null) {
-			for (Element element : roundEnv.getElementsAnnotatedWith(annotationType)) {
-				processElement(element);
-			}
-		}
-	}
-
-	private void processEndpoint(RoundEnvironment roundEnv) {
-		TypeElement endpointType = this.metadataEnv.getEndpointAnnotationElement();
-		if (endpointType != null) {
-			getElementsAnnotatedOrMetaAnnotatedWith(roundEnv, endpointType).forEach(this::processEndpoint);
-		}
-	}
-
-	private void processImportConfigurationPropertiesBean(RoundEnvironment roundEnv) {
-		TypeElement importConfigurationPropertiesBeanType = this.metadataEnv
-				.getImportConfigurationPropertiesBeanAnnotationElement();
-		TypeElement importConfigurationPropertiesBeansType = this.metadataEnv
-				.getImportConfigurationPropertiesBeansAnnotationElement();
-		if (importConfigurationPropertiesBeanType == null && importConfigurationPropertiesBeansType == null) {
-			return;
-		}
-		Set<Element> elements = new LinkedHashSet<>();
-		if (importConfigurationPropertiesBeanType != null) {
-			elements.addAll(roundEnv.getElementsAnnotatedWith(importConfigurationPropertiesBeanType));
-		}
-		if (importConfigurationPropertiesBeansType != null) {
-			elements.addAll(roundEnv.getElementsAnnotatedWith(importConfigurationPropertiesBeansType));
-		}
-		elements.forEach(this::processImportConfigurationPropertiesBean);
 	}
 
 	private Map<Element, List<Element>> getElementsAnnotatedOrMetaAnnotatedWith(RoundEnvironment roundEnv,
@@ -223,11 +222,11 @@ public class ConfigurationMetadataAnnotationProcessor extends AbstractProcessor 
 			AnnotationMirror annotation = this.metadataEnv.getConfigurationPropertiesAnnotation(element);
 			if (annotation != null) {
 				String prefix = getPrefix(annotation);
-				if (element instanceof TypeElement) {
-					processAnnotatedTypeElement(prefix, (TypeElement) element, false, new Stack<>());
+				if (element instanceof TypeElement typeElement) {
+					processAnnotatedTypeElement(prefix, typeElement, new ArrayDeque<>());
 				}
-				else if (element instanceof ExecutableElement) {
-					processExecutableElement(prefix, (ExecutableElement) element, new Stack<>());
+				else if (element instanceof ExecutableElement executableElement) {
+					processExecutableElement(prefix, executableElement, new ArrayDeque<>());
 				}
 			}
 		}
@@ -236,48 +235,47 @@ public class ConfigurationMetadataAnnotationProcessor extends AbstractProcessor 
 		}
 	}
 
-	private void processAnnotatedTypeElement(String prefix, TypeElement element, boolean fromImport,
-			Stack<TypeElement> seen) {
+	private void processAnnotatedTypeElement(String prefix, TypeElement element, Deque<TypeElement> seen) {
 		String type = this.metadataEnv.getTypeUtils().getQualifiedName(element);
 		this.metadataCollector.add(ItemMetadata.newGroup(prefix, type, type, null));
-		processTypeElement(prefix, element, fromImport, null, seen);
+		processTypeElement(prefix, element, null, seen);
 	}
 
-	private void processExecutableElement(String prefix, ExecutableElement element, Stack<TypeElement> seen) {
+	private void processExecutableElement(String prefix, ExecutableElement element, Deque<TypeElement> seen) {
 		if ((!element.getModifiers().contains(Modifier.PRIVATE))
 				&& (TypeKind.VOID != element.getReturnType().getKind())) {
 			Element returns = this.processingEnv.getTypeUtils().asElement(element.getReturnType());
-			if (returns instanceof TypeElement) {
+			if (returns instanceof TypeElement typeElement) {
 				ItemMetadata group = ItemMetadata.newGroup(prefix,
 						this.metadataEnv.getTypeUtils().getQualifiedName(returns),
 						this.metadataEnv.getTypeUtils().getQualifiedName(element.getEnclosingElement()),
 						element.toString());
 				if (this.metadataCollector.hasSimilarGroup(group)) {
-					this.processingEnv.getMessager().printMessage(Kind.ERROR,
-							"Duplicate `@ConfigurationProperties` definition for prefix '" + prefix + "'", element);
+					this.processingEnv.getMessager()
+						.printMessage(Kind.ERROR,
+								"Duplicate @ConfigurationProperties definition for prefix '" + prefix + "'", element);
 				}
 				else {
 					this.metadataCollector.add(group);
-					processTypeElement(prefix, (TypeElement) returns, false, element, seen);
+					processTypeElement(prefix, typeElement, element, seen);
 				}
 			}
 		}
 	}
 
-	private void processTypeElement(String prefix, TypeElement element, boolean fromImport, ExecutableElement source,
-			Stack<TypeElement> seen) {
+	private void processTypeElement(String prefix, TypeElement element, ExecutableElement source,
+			Deque<TypeElement> seen) {
 		if (!seen.contains(element)) {
 			seen.push(element);
-			new PropertyDescriptorResolver(this.metadataEnv).resolve(element, fromImport, source)
-					.forEach((descriptor) -> {
-						this.metadataCollector.add(descriptor.resolveItemMetadata(prefix, this.metadataEnv));
-						if (descriptor.isNested(this.metadataEnv)) {
-							TypeElement nestedTypeElement = (TypeElement) this.metadataEnv.getTypeUtils()
-									.asElement(descriptor.getType());
-							String nestedPrefix = ConfigurationMetadata.nestedPrefix(prefix, descriptor.getName());
-							processTypeElement(nestedPrefix, nestedTypeElement, false, source, seen);
-						}
-					});
+			new PropertyDescriptorResolver(this.metadataEnv).resolve(element, source).forEach((descriptor) -> {
+				this.metadataCollector.add(descriptor.resolveItemMetadata(prefix, this.metadataEnv));
+				if (descriptor.isNested(this.metadataEnv)) {
+					TypeElement nestedTypeElement = (TypeElement) this.metadataEnv.getTypeUtils()
+						.asElement(descriptor.getType());
+					String nestedPrefix = ConfigurationMetadata.nestedPrefix(prefix, descriptor.getName());
+					processTypeElement(nestedPrefix, nestedTypeElement, source, seen);
+				}
+			});
 			seen.pop();
 		}
 	}
@@ -286,8 +284,8 @@ public class ConfigurationMetadataAnnotationProcessor extends AbstractProcessor 
 		try {
 			String annotationName = this.metadataEnv.getTypeUtils().getQualifiedName(annotations.get(0));
 			AnnotationMirror annotation = this.metadataEnv.getAnnotation(element, annotationName);
-			if (element instanceof TypeElement) {
-				processEndpoint(annotation, (TypeElement) element);
+			if (element instanceof TypeElement typeElement) {
+				processEndpoint(annotation, typeElement);
 			}
 		}
 		catch (Exception ex) {
@@ -298,34 +296,49 @@ public class ConfigurationMetadataAnnotationProcessor extends AbstractProcessor 
 	private void processEndpoint(AnnotationMirror annotation, TypeElement element) {
 		Map<String, Object> elementValues = this.metadataEnv.getAnnotationElementValues(annotation);
 		String endpointId = (String) elementValues.get("id");
-		if (endpointId == null || "".equals(endpointId)) {
+		if (endpointId == null || endpointId.isEmpty()) {
 			return; // Can't process that endpoint
 		}
 		String endpointKey = ItemMetadata.newItemMetadataPrefix("management.endpoint.", endpointId);
-		Boolean enabledByDefault = (Boolean) elementValues.get("enableByDefault");
+		boolean enabledByDefaultAttribute = (boolean) elementValues.getOrDefault("enableByDefault", true);
+		String defaultAccess = (!enabledByDefaultAttribute) ? "none"
+				: (elementValues.getOrDefault("defaultAccess", "unrestricted").toString()).toLowerCase(Locale.ENGLISH);
+		boolean enabledByDefault = !"none".equals(defaultAccess) && enabledByDefaultAttribute;
 		String type = this.metadataEnv.getTypeUtils().getQualifiedName(element);
-		this.metadataCollector.add(ItemMetadata.newGroup(endpointKey, type, type, null));
-		this.metadataCollector.add(ItemMetadata.newProperty(endpointKey, "enabled", Boolean.class.getName(), type, null,
-				String.format("Whether to enable the %s endpoint.", endpointId),
-				(enabledByDefault != null) ? enabledByDefault : true, null));
+		this.metadataCollector.addIfAbsent(ItemMetadata.newGroup(endpointKey, type, type, null));
+		ItemMetadata accessProperty = ItemMetadata.newProperty(endpointKey, "access", endpointAccessEnum(), type, null,
+				"Permitted level of access for the %s endpoint.".formatted(endpointId), defaultAccess, null);
+		this.metadataCollector.add(
+				ItemMetadata.newProperty(endpointKey, "enabled", Boolean.class.getName(), type, null,
+						"Whether to enable the %s endpoint.".formatted(endpointId), enabledByDefault,
+						new ItemDeprecation(null, accessProperty.getName(), "3.4.0")),
+				(existing) -> checkEnabledValueMatchesExisting(existing, enabledByDefault, type));
+		this.metadataCollector.add(accessProperty,
+				(existing) -> checkDefaultAccessValueMatchesExisting(existing, defaultAccess, type));
 		if (hasMainReadOperation(element)) {
-			this.metadataCollector.add(ItemMetadata.newProperty(endpointKey, "cache.time-to-live",
+			this.metadataCollector.addIfAbsent(ItemMetadata.newProperty(endpointKey, "cache.time-to-live",
 					Duration.class.getName(), type, null, "Maximum time that a response can be cached.", "0ms", null));
 		}
 	}
 
-	private void processImportConfigurationPropertiesBean(Element element) {
-		this.metadataEnv.getImportConfigurationPropertiesBeanAnnotations(element)
-				.forEach(this::processImportConfigurationPropertiesBean);
+	private void checkEnabledValueMatchesExisting(ItemMetadata existing, boolean enabledByDefault, String sourceType) {
+		boolean existingDefaultValue = (boolean) existing.getDefaultValue();
+		if (enabledByDefault != existingDefaultValue) {
+			throw new IllegalStateException(
+					"Existing property '%s' from type %s has a conflicting value. Existing value: %b, new value from type %s: %b"
+						.formatted(existing.getName(), existing.getSourceType(), existingDefaultValue, sourceType,
+								enabledByDefault));
+		}
 	}
 
-	@SuppressWarnings("unchecked")
-	private void processImportConfigurationPropertiesBean(AnnotationMirror annotation) {
-		String prefix = getPrefix(annotation);
-		List<TypeMirror> types = (List<TypeMirror>) this.metadataEnv.getAnnotationElementValues(annotation).get("type");
-		for (TypeMirror type : types) {
-			Element element = this.metadataEnv.getTypeUtils().asElement(type);
-			processAnnotatedTypeElement(prefix, (TypeElement) element, true, new Stack<>());
+	private void checkDefaultAccessValueMatchesExisting(ItemMetadata existing, String defaultAccess,
+			String sourceType) {
+		String existingDefaultAccess = (String) existing.getDefaultValue();
+		if (!Objects.equals(defaultAccess, existingDefaultAccess)) {
+			throw new IllegalStateException(
+					"Existing property '%s' from type %s has a conflicting value. Existing value: %b, new value from type %s: %b"
+						.formatted(existing.getName(), existing.getSourceType(), existingDefaultAccess, sourceType,
+								defaultAccess));
 		}
 	}
 
@@ -349,19 +362,14 @@ public class ConfigurationMetadataAnnotationProcessor extends AbstractProcessor 
 	}
 
 	private String getPrefix(AnnotationMirror annotation) {
-		Map<String, Object> elementValues = this.metadataEnv.getAnnotationElementValues(annotation);
-		Object prefix = elementValues.get("prefix");
-		if (prefix != null && !"".equals(prefix)) {
-			return (String) prefix;
+		String prefix = this.metadataEnv.getAnnotationElementStringValue(annotation, "prefix");
+		if (prefix != null) {
+			return prefix;
 		}
-		Object value = elementValues.get("value");
-		if (value != null && !"".equals(value)) {
-			return (String) value;
-		}
-		return null;
+		return this.metadataEnv.getAnnotationElementStringValue(annotation, "value");
 	}
 
-	protected ConfigurationMetadata writeMetaData() throws Exception {
+	protected ConfigurationMetadata writeMetadata() throws Exception {
 		ConfigurationMetadata metadata = this.metadataCollector.getMetadata();
 		metadata = mergeAdditionalMetadata(metadata);
 		if (!metadata.getItems().isEmpty()) {
